--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/codemirror.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/theme/monokai.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/theme/material.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/theme/solarized.min.css">
     <style>
 .column {
   float: left;
@@ -26,7 +27,9 @@
         <div id="__textarea__"></div>
       </div>
       <div class="column">
-        <div id="__app__"></div>
+        <div style="margin: 10px;">
+          <div id="__app__"></div>
+        </div>
       </div>
     </div>
 
@@ -37,12 +40,16 @@
 
       var frame = document.getElementById("__textarea__");
       var myCodeMirror = CodeMirror(frame, {
+        value: "[u -> [x -> [y -> ONE, z -> ?](z -> x.y)].x.z, @ -> $.u]",
         lineNumbers: true,
+        mode: {name: "javascript", json: true},
+        theme: "solarized light",
       });
 
       myCodeMirror.on("changes", function(cm, changedObjects){
         app.ports.codeUpdateReceiver.send(myCodeMirror.getValue());
       });
+      app.ports.codeUpdateReceiver.send(myCodeMirror.getValue());
     </script>
   </body>
 </html>
