--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
       </header>
       <div class="row">
         <div class="column">
-          <p><a href="https://www.eolang.org">𝜑-calculus</a> expression:</p>
+          <p>
+            <a href="https://www.eolang.org">𝜑-calculus</a> expression
+            (<a href="#">permalink</a>):</p>
           <div id="__textarea__"></div>
         </div>
         <div class="column">
