--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,12 @@
         <nav>
           <ul>
             <li>
+              To discuss how 𝜑-calculus works, join our
+              <a href="https://t.me/polystat_org">Telegram group</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
               <a href="https://github.com/fizruk/try-phi/stargazers">
                 <img src="https://img.shields.io/github/stars/fizruk/try-phi.svg?style=flat-square" alt="github stars"/>
               </a>
