--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/theme/solarized.min.css">
     <link rel="shortcut icon" href="https://www.yegor256.com/images/books/elegant-objects/cactus.png"/>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css"/>
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <style>
       section { width: 100%; }
       .column { float: left; width: 50%; padding: 1em; }
