--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,21 @@
       <div class="row">
         <div class="column">
           <p>
-            <a href="https://www.eolang.org">𝜑-calculus</a> expression
-            (<a id="__permalink__" href="#">permalink</a>):</p>
+            <label class="selected_mode">
+              Minimal
+            </label>
+            <label class="switch">
+              <input type="checkbox" id="toggler" onchange="switch_mode()" checked>
+              <span class="slider round"></span>
+            </label>
+            <label class="selected_mode">
+              Full
+            </label>
+            <label class="reference_line">
+              <a href="https://www.eolang.org">𝜑-calculus</a> expression
+              (<a id="__permalink__" href="#">permalink</a>):
+            </label>
+          </p>
           <div id="__textarea__"></div>
         </div>
         <div class="column">
