--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,14 @@
       <div class="column">
         <p>
           <label class="selected_mode">
-            Minimal
-          </label>
+            <b>Minimal</b>
+          </label>  
           <label class="switch">
             <input type="checkbox" id="toggler" onchange="switch_mode()" checked>
             <span class="slider round"></span>
           </label>
           <label class="selected_mode">
-            Full
+            <b>Full</b>
           </label>
           <label class="reference_line">
             <a href="https://www.eolang.org">𝜑-calculus</a> expression
@@ -66,7 +66,9 @@
 
         <div class="container" style="margin-top: 50px;">
           <div style="margin-top: 50px;">
-            <h5>Corresponding graph</h5>
+            <div>
+              <b>Corresponding graph</b>
+            </div>
             <img id="result_graph_image"
               src="https://quickchart.io/graphviz?graph=digraph%20G%20%7Bsome-%3E%22graph%22%5Blabel=%22%20%20default%22,%20style=%22dashed%22%5D;%7D"
               class="img-fluid" alt="Graph image">
@@ -81,7 +83,9 @@
 
         <div class="container" style="margin-top: 50px;  margin-bottom: 50px;">
           <div class="col-sm">
-            <h5>Current DOT-string</h5>
+            <div>
+              <b>Current DOT-string</b>
+            </div>
             <div class="form-group">
               <textarea id="result_dot_string" class="form-control" id="exampleFormControlTextarea1" rows="3"
                 spellcheck="false"></textarea>
