--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,14 @@
       <div class="column">
         <p>
           <label class="selected_mode">
-            <b>Minimal</b>
+            Minimal
           </label>  
           <label class="switch">
             <input type="checkbox" id="toggler" onchange="switch_mode()" checked>
             <span class="slider round"></span>
           </label>
           <label class="selected_mode">
-            <b>Full</b>
+            Full
           </label>
           <label class="reference_line">
             <a href="https://www.eolang.org">𝜑-calculus</a> expression
