--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
             Minimal
           </label>  
           <label class="switch">
-            <input type="checkbox" id="toggler" onchange="switch_mode()" checked>
+            <input type="checkbox" id="toggler" onchange="switch_mode()">
             <span class="slider round"></span>
           </label>
           <label class="selected_mode">
@@ -144,8 +144,7 @@
 
     /*upon toggle*/
     function switch_mode() {
-      var toggler;
-      toggler = document.getElementById('toggler');
+      var toggler = document.getElementById('toggler');
       if (toggler.checked) {
         app.ports.switchMode.send(1);
       }
@@ -172,7 +171,16 @@
     })
 
     /* use default snippet if one is not set in the query parameters */
-    snippet = "[ u ->\n  [ x ->\n    [ y -> 1\n    , z -> ?\n    ](z -> x.y)\n  ].x.z\n, @ -> $.u\n].inc";
+    var toggler = document.getElementById('toggler');
+    // Full Phi
+    if (toggler.checked) {
+      snippet = "[ u ->\n  [ x ->\n    [ y -> 1\n    , z -> ?\n    ](z -> x.y)\n  ].x.z\n, @ -> $.u\n].inc";
+    }
+    // Minimal Phi
+    else {
+      snippet = "[ u ->\n  [ x ->\n    [ y -> $.a\n    , z -> ?\n    ](z -> ^.^.x.y)\n  ].x.z\n, @ -> $.u\n].inc";
+    }
+    
     if (params.has("snippet")) {
       snippet = decodeURIComponent(params.get("snippet"));
     }
