--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script src="all.js"></script>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.js"></script> 
+  
   <link rel="shortcut icon" href="https://www.yegor256.com/images/books/elegant-objects/cactus.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css.min.css" />
   <link rel="stylesheet" href="styles.css" type="text/css">
@@ -41,93 +45,98 @@
         </a>
       </center>
     </header>
-    <div class="column">
-      <div class="object">
-        <p>
-          <label class="selected_mode">
-            Minimal
-          </label>
-          <label class="switch">
-            <input type="checkbox" id="toggler" onchange="switch_mode()">
-            <span class="slider round"></span>
-          </label>
-          <label class="selected_mode">
-            Full
-          </label>
-          <label class="reference_line">
-            <a href="https://www.eolang.org">𝜑-calculus</a> expression
-            (<a id="__permalink__" href="#">permalink</a>)
-          </label>
-        </p>
+    <div class="container-fluid" id="cont">
+      <div class="row">
+        <div class="col">
+          <div>
+            <p>
+              <label class="selected_mode">
+                Minimal
+              </label>
+              <!-- <label class="switch">
+                <input type="checkbox" id="toggler" onchange="switch_mode()">
+                <span class="slider round"></span>
+              </label>
+              <label class="selected_mode">
+                Full
+              </label> -->
+              <label class="reference_line">
+                <a href="https://www.eolang.org">𝜑-calculus</a> expression
+                (<a id="__permalink__" href="#">permalink</a>)
+              </label>
+              <label class="selected_mode editor_info" class="btn btn-secondary" data-bs- data-bs-toggle="tooltip" data-bs-html="true" id="editor_info"></label>
+            </p>
+          </div>
+        </div>
+        <div class="col"></div>
       </div>
       <div class="row">
-        <table>
-          <tr>
-            <td class="object">
-              <div id="editor"></div>
-            </td>
-            <td>
-              <div>
-                <table class="rules">
-                  <caption>
-                    <b>Minimal φ Syntax</b>
-                    <br>
-                    Lezer grammar is available <a href="./codemirror/src/lezer.grammar">here</a>
-                  </caption>
-                  <tr>
-                    <td>
-                      t :=
-                    </td>
-                    <td>
-                      (term)
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      &nbsp; &nbsp; t.a
-                    </td>
-                    <td>
-                      (attribute)
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      &nbsp; | t₁(a -> t₂)
-                    </td>
-                    <td>
-                      (application)
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      &nbsp; | [a₁ -> ?, …, aₖ -> ?, aₖ₊₁ -> tₖ₊₁, …, aₘ -> tₘ]
-                    </td>
-                    <td>
-                      (object)
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      &nbsp; | ^n
-                    </td>
-                    <td>
-                      (locator)
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      a := ( [a-z]([a-z0-9] | '_' )* ) | '@'
-                    </td>
-                    <td>
-                      (attribute name)
-                    </td>
-                  </tr>
-                </table>
-              </div>
-            </td>
-          </tr>
-        </table>
+        <div class="col">
+          <div id="editor"></div>
+        </div>
+        <div class="col" id="syntax_rules">
+          <table class="table table-sm caption-top table-borderless">
+            <caption>
+              <b>Minimal φ Syntax</b>
+              <!-- <br>
+              Lezer grammar is available <a href="./codemirror/src/lezer.grammar">here</a> -->
+            </caption>
+            <tbody>
+              <tr>
+                <td>
+                  t :=
+                </td>
+                <td>
+                  (term)
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp; &nbsp; t.a
+                </td>
+                <td>
+                  (attribute)
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp; | t₁(a -> t₂)
+                </td>
+                <td>
+                  (application)
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp; | [a₁ -> ?, …, aₖ -> ?, aₖ₊₁ -> tₖ₊₁, …, aₘ -> tₘ]
+                </td>
+                <td>
+                  (object)
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  &nbsp; | ^n
+                </td>
+                <td>
+                  (locator)
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  a := ( [a-z]([a-z0-9] | '_' )* ) | '@'
+                </td>
+                <td>
+                  (attribute name)
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
+    </div>
+
+    <div class="column">
       <div class="row">
         <div id="__app__"></div>
       </div>
@@ -151,6 +160,30 @@
       </nav>
     </footer>
   </section>
+  
+  <script>
+    // enable info tooltips
+    var infoSVG = `<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-square" viewBox="0 0 16 16">` +
+              `<path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>` +
+              `<path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>` +
+            `</svg>`
+    
+            var infos = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    for (var i = 0; i < infos.length; i++) {
+      infos[i].innerHTML = infoSVG
+    }
+  </script>
+
+  <script>
+    // tooltip for editor
+    document.getElementById("editor_info").title = 
+    `<ul>` + 
+      `<li>Original <a href='https://drive.google.com/open?id=1ZxlI0npXn4qLQj9hzCQtH3-O5xnrAsJH&disco=AAAATVEUf-E'>syntax</a></li>`+
+      `<li>Minimal 𝜑-calculus <a href='https://drive.google.com/file/d/1ZxlI0npXn4qLQj9hzCQtH3-O5xnrAsJH/edit?disco=AAAASlupb0I'>definition</a></li>`+
+      `</ul>`
+
+  </script>
+
   <!-- load codemirror (cm) bundle and set it up in the editor div -->
   <script src="codemirror/docs/build/bundle.js"></script>
   <script>
@@ -191,6 +224,16 @@
     });
 
   </script>
+  <script>
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+      return new bootstrap.Tooltip(tooltipTriggerEl)
+    })
+    $('.editor_info').tooltip({
+      sanitize: false
+    }).tooltip('show')
+  </script>
+  
 </body>
 
 </html>
